PROJECT (json2pb)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (LIBJSON2BB_VERSION_MAJOR 0)
SET (LIBJSON2BB_VERSION_MINOR 1)
SET (LIBJSON2BB_VERSION_PATCH 1)
SET (LIBJSON2BB_VERSION "${LIBJSON2BB_VERSION_MAJOR}.${LIBJSON2BB_VERSION_MINOR}.${LIBJSON2BB_VERSION_PATCH}")
SET (LIBJSON2BB_RPM_RELEASE 1)

SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -DNDEBUG -fPIC -pipe")
SET (CMAKE_CXX_FLAGS ${CMAKE_C_FLAGS})

FIND_PATH (inc_JANSSON jansson.h)
INCLUDE_DIRECTORIES (${inc_JANSSON})

INCLUDE_DIRECTORIES (.)

SET (CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
FIND_LIBRARY (lib_JANSSON jansson)

ADD_LIBRARY (json2pb-st STATIC json2pb.cc)
TARGET_LINK_LIBRARIES (json2pb-st ${lib_JANSSON})
SET_TARGET_PROPERTIES (json2pb-st PROPERTIES OUTPUT_NAME "json2pb")

ADD_LIBRARY (json2pb-so SHARED json2pb.cc)
TARGET_LINK_LIBRARIES (json2pb-so ${lib_JANSSON})
SET_TARGET_PROPERTIES (json2pb-so PROPERTIES VERSION ${LIBJSON2BB_VERSION} SOVERSION ${LIBJSON2BB_VERSION_MAJOR} OUTPUT_NAME "json2pb")

ENABLE_TESTING ()
ADD_SUBDIRECTORY (test)