PROJECT (json2pb)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (LIBDIR lib)
SET (LIBJSON2PB_VERSION_MAJOR 1)
SET (LIBJSON2PB_VERSION_MINOR 4)
SET (LIBJSON2PB_VERSION_PATCH 2)
SET (LIBJSON2PB_VERSION "${LIBJSON2PB_VERSION_MAJOR}.${LIBJSON2PB_VERSION_MINOR}.${LIBJSON2PB_VERSION_PATCH}")
SET (LIBJSON2BB_RPM_RELEASE 1)

SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -DNDEBUG -pipe -std=c++11")
SET (CMAKE_CXX_FLAGS ${CMAKE_C_FLAGS})

INCLUDE_DIRECTORIES (.)

FIND_PACKAGE (Protobuf REQUIRED)
INCLUDE_DIRECTORIES (${PROTOBUF_INCLUDE_DIRS})

FIND_PACKAGE (Boost COMPONENTS unit_test_framework)
INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})

FIND_PATH (inc_JANSSON jansson.h)
INCLUDE_DIRECTORIES (${inc_JANSSON})
FIND_LIBRARY (lib_JANSSON jansson)

ADD_LIBRARY (json2pb SHARED json2pb.cc extensions.cpp hooks.cpp)
TARGET_LINK_LIBRARIES (json2pb ${lib_JANSSON} ${PROTOBUF_LIBRARIES})
SET_TARGET_PROPERTIES (json2pb PROPERTIES VERSION ${LIBJSON2PB_VERSION} SOVERSION ${LIBJSON2PB_VERSION_MAJOR})

FILE (GLOB HDR "*.h*")
INSTALL (FILES ${HDR} DESTINATION include/json2pb)
INSTALL (TARGETS json2pb DESTINATION ${LIBDIR})

IF (Boost_FOUND)
    ENABLE_TESTING ()
    ADD_SUBDIRECTORY (test)
ENDIF (Boost_FOUND)
