INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}")
FIND_PACKAGE (Protobuf REQUIRED)

FIND_PATH (inc_PROTOBUF google/protobuf/service.h)
INCLUDE_DIRECTORIES (${inc_PROTOBUF})

FIND_LIBRARY (lib_PROTOBUF protobuf)

PROTOBUF_GENERATE_CPP (PROTO_SRCS PROTO_HDRS test.proto)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE (test_json test_json.cc ${PROTO_SRCS})
TARGET_LINK_LIBRARIES (test_json json2pb-st ${lib_PROTOBUF})
ADD_TEST (NAME test_json COMMAND test_json WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})




